# langchain

./: .gitignore  exercise.py  ingestion.py  main.py  mediumblog1.txt  pyproject.toml  test.py
