[project]
name = "pythonproject2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.1",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.0.0",
    "langchainhub>=0.1.21",
    "python-dotenv>=1.2.1",
]
